framework/src/main/java/org/example/framework/error/ErrorMessageInitializer.java
package org.example.framework.error;

public interface ErrorMessageInitializer {

  void initialize();

  void addMessage(String code, String message);
}
